[gd_scene load_steps=23 format=3 uid="uid://daoy7gyds2k8"]

[ext_resource type="Script" path="res://world/ram.gd" id="1_g5j4y"]
[ext_resource type="Texture2D" uid="uid://f3fhr462dd83" path="res://world/circuit_tile_dark.png" id="2_dp3v0"]
[ext_resource type="PackedScene" uid="uid://byvj1cfh1su7t" path="res://world/Portal.tscn" id="2_is2bt"]
[ext_resource type="Texture2D" uid="uid://dnq2ggcm5qqaw" path="res://world/darkgray_floor.png" id="3_00nls"]
[ext_resource type="Texture2D" uid="uid://cmu2f8sys76es" path="res://world/darklightgray_floor.png" id="3_ajwu0"]
[ext_resource type="PackedScene" uid="uid://ccm2vdp5io3vp" path="res://player/player.tscn" id="3_fswf6"]
[ext_resource type="Texture2D" uid="uid://dwdxso470eg53" path="res://world/redel.png" id="5_48q4w"]
[ext_resource type="PackedScene" uid="uid://b7t3811iosaup" path="res://world/ram-lockers.tscn" id="6_mx5b5"]
[ext_resource type="Texture2D" uid="uid://c4fnrvu6oejih" path="res://world/drop_off_area_light.png" id="7_md5tq"]
[ext_resource type="Texture2D" uid="uid://cbgx7cdi6dvvp" path="res://world/darkgray_wall_tiles.png" id="8_mhyms"]
[ext_resource type="PackedScene" uid="uid://87m80d5eiivu" path="res://world/controlpanel.tscn" id="8_qo7rs"]
[ext_resource type="PackedScene" uid="uid://dp1o46gwbqr2c" path="res://world/item.tscn" id="12_k652e"]
[ext_resource type="PackedScene" uid="uid://br4lrmgvvps1n" path="res://menu/InfoPanel.tscn" id="12_pmnro"]
[ext_resource type="Texture2D" uid="uid://be4gn4vory1dm" path="res://world/shelve.png" id="12_sxi6q"]
[ext_resource type="FontFile" uid="uid://mijglbcw51mn" path="res://menu/fonts/century_gothic_bold.ttf" id="14_hw4pw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ybfr6"]
texture = ExtResource("8_mhyms")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -16, 16, 16, 16, 16, -16)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_ext61"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_ybfr6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_km4bc"]
size = Vector2(160, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cnvpe"]
size = Vector2(194.03, 14.9254)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m47pm"]
bg_color = Color(1, 0.615686, 0.0745098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_216ju"]
bg_color = Color(1, 0.615686, 0.0745098, 0.839216)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jjbt"]
bg_color = Color(1, 0.172549, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ram" type="Node2D"]
script = ExtResource("1_g5j4y")

[node name="TextureRectCircuit" type="TextureRect" parent="."]
offset_left = -272.0
offset_top = -201.0
offset_right = 3832.0
offset_bottom = 1949.0
scale = Vector2(0.26, 0.26)
texture = ExtResource("2_dp3v0")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = -4.0
offset_top = 106.0
offset_right = 5042.0
offset_bottom = 1244.0
scale = Vector2(0.065, 0.065)
texture = ExtResource("3_ajwu0")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -1.0
offset_right = 1109.0
offset_bottom = 372.0
scale = Vector2(0.29, 0.29)
texture = ExtResource("3_00nls")
expand_mode = 1
stretch_mode = 1

[node name="Redel" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.12549)
position = Vector2(225, 100.427)
scale = Vector2(0.135, 0.135)
texture = ExtResource("5_48q4w")

[node name="gray_walls" type="TileMap" parent="."]
scale = Vector2(0.125, 0.125)
tile_set = SubResource("TileSet_ext61")
format = 2
layer_0/tile_data = PackedInt32Array(2949181, 0, 0, 2949182, 0, 0, 2949183, 0, 0, 2949184, 0, 0, 2949185, 0, 0, 2949186, 0, 0, 2949187, 0, 0, 2949188, 0, 0, 2949189, 0, 0, 2949190, 0, 0, 2949191, 0, 0, 2949192, 0, 0, 2949193, 0, 0, 2949194, 0, 0, 2949195, 0, 0, 2949196, 0, 0, 2949197, 0, 0, 2949198, 0, 0, 2949199, 0, 0, 2949160, 0, 0, 2949161, 0, 0, 2949162, 0, 0, 2949163, 0, 0, 2949164, 0, 0, 2949165, 0, 0, 2949166, 0, 0, 2949167, 0, 0, 2949168, 0, 0, 2949169, 0, 0, 2949170, 0, 0, 2949171, 0, 0, 2949172, 0, 0, 2949173, 0, 0, 2949174, 0, 0, 2949175, 0, 0, 2949176, 0, 0, 2949177, 0, 0, 2949178, 0, 0, 2949179, 0, 0, 2949180, 0, 0, 2949120, 0, 0, 2949121, 0, 0, 2949122, 0, 0, 2949123, 0, 0, 2949124, 0, 0, 2949125, 0, 0, 2949126, 0, 0, 2949127, 0, 0, 2949128, 0, 0, 2949129, 0, 0, 2949130, 0, 0, 2949131, 0, 0, 2949132, 0, 0, 2949133, 0, 0, 2949134, 0, 0, 2949135, 0, 0, 2949136, 0, 0, 2949137, 0, 0, 2949138, 0, 0, 2949139, 0, 0, 2949140, 0, 0, 2949141, 0, 0, 2949142, 0, 0, 2949143, 0, 0, 2949144, 0, 0, 2949145, 0, 0, 2949146, 0, 0, 2949147, 0, 0, 2949148, 0, 0, 2949149, 0, 0, 2949150, 0, 0, 2949151, 0, 0, 2949152, 0, 0, 2949153, 0, 0, 2949154, 0, 0, 2949155, 0, 0, 2949156, 0, 0, 2949157, 0, 0, 2949158, 0, 0, 2949159, 0, 0, 2359295, 0, 0, 2424831, 0, 0, 2490367, 0, 0, 2555903, 0, 0, 3014655, 0, 0, 1572863, 0, 0, 1638399, 0, 0, 1703935, 0, 0, 1769471, 0, 0, 1835007, 0, 0, 1900543, 0, 0, 1966079, 0, 0, 2031615, 0, 0, 2097151, 0, 0, 2162687, 0, 0, 2228223, 0, 0, 2293759, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 851967, 0, 0, 917503, 0, 0, 983039, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 1179647, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, -65488, 0, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 0, 0, -65480, 0, 0, -65479, 0, 0, -65478, 0, 0, -65477, 0, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 0, 0, -65465, 0, 0, -65464, 0, 0, -65463, 0, 0, -65462, 0, 0, -65460, 0, 0, -65459, 0, 0, -65458, 0, 0, -65457, 0, 0, -65456, 0, 0, 80, 0, 0, 65616, 0, 0, 131152, 0, 0, 196688, 0, 0, 262224, 0, 0, 327760, 0, 0, 393296, 0, 0, 458832, 0, 0, 524368, 0, 0, 589904, 0, 0, 655440, 0, 0, 720976, 0, 0, 786512, 0, 0, 852048, 0, 0, 917584, 0, 0, 983120, 0, 0, 1048656, 0, 0, 1114192, 0, 0, 1179728, 0, 0, 1245264, 0, 0, 1310800, 0, 0, 1376336, 0, 0, 1441872, 0, 0, 1507408, 0, 0, 1572944, 0, 0, 1638480, 0, 0, 1704016, 0, 0, 1769552, 0, 0, 1835088, 0, 0, 1900624, 0, 0, 1966160, 0, 0, 2031696, 0, 0, 2097232, 0, 0, 2162768, 0, 0, 2228304, 0, 0, 2293840, 0, 0, 2359376, 0, 0, 2424912, 0, 0, 2490448, 0, 0, 2949200, 0, 0, -65461, 0, 0, 1245183, 0, 0, 1310719, 0, 0, 1376255, 0, 0, 1441791, 0, 0, 1507327, 0, 0)

[node name="Portal" parent="." instance=ExtResource("2_is2bt")]
position = Vector2(324, 179.72)
rotation = -1.5708
scale = Vector2(0.755, 0.755)
next_scene_path = "res://world/world.tscn"
player_spawn_location = Vector2(-149, 55)

[node name="Portal2" parent="." instance=ExtResource("2_is2bt")]
position = Vector2(-8, 179.765)
rotation = -1.5708
scale = Vector2(0.755, 0.755)
next_scene_path = "res://world/world.tscn"
player_spawn_location = Vector2(-365, 56)

[node name="DropOffArea" type="Area2D" parent="."]
position = Vector2(59, 132)
scale = Vector2(0.2, 0.2)
collision_layer = 4
collision_mask = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="DropOffArea"]
texture = ExtResource("7_md5tq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropOffArea"]
visible = false
position = Vector2(0.000183105, 0)
shape = SubResource("RectangleShape2D_km4bc")

[node name="DropOffArea2" type="Area2D" parent="."]
position = Vector2(264, 132)
scale = Vector2(0.2, 0.2)
collision_layer = 4
collision_mask = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="DropOffArea2"]
texture = ExtResource("7_md5tq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropOffArea2"]
position = Vector2(0.000183105, 0)
shape = SubResource("RectangleShape2D_km4bc")

[node name="ysort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Controlpanel" parent="ysort" instance=ExtResource("8_qo7rs")]
position = Vector2(161, 128)
panel_scene = "res://menu/ram_menu.tscn"
panel_name = "ram_panel"

[node name="ram-lockers" parent="ysort" instance=ExtResource("6_mx5b5")]
position = Vector2(9.53674e-07, 3.8147e-06)
layer_0/tile_data = PackedInt32Array(1179672, 0, 0, 983064, 0, 0, 1179667, 0, 0, 1179666, 0, 0, 1179665, 0, 0, 1179664, 0, 0, 1179663, 0, 0, 1179662, 0, 0, 1179661, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179660, 0, 0, 1179671, 0, 0, 983052, 0, 0, 983063, 0, 0)

[node name="player" parent="ysort" instance=ExtResource("3_fswf6")]
position = Vector2(306, 170)

[node name="items" type="Node2D" parent="ysort"]
y_sort_enabled = true

[node name="item" parent="ysort/items" instance=ExtResource("12_k652e")]
position = Vector2(255, 108)
item_name = "box2"
saving = false

[node name="item2" parent="ysort/items" instance=ExtResource("12_k652e")]
position = Vector2(268, 108)
item_name = "box2"
saving = false

[node name="item3" parent="ysort/items" instance=ExtResource("12_k652e")]
position = Vector2(273, 102)
item_name = "box2"
saving = false

[node name="item4" parent="ysort/items" instance=ExtResource("12_k652e")]
position = Vector2(261, 96)
item_name = "box2"
saving = false

[node name="riiul" type="StaticBody2D" parent="ysort"]
position = Vector2(264, 88)
scale = Vector2(0.134, 0.134)

[node name="Shelve" type="Sprite2D" parent="ysort/riiul"]
position = Vector2(0, 97.0149)
texture = ExtResource("12_sxi6q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ysort/riiul"]
position = Vector2(0, 153.186)
shape = SubResource("RectangleShape2D_cnvpe")
disabled = true

[node name="InfoPanel" parent="ysort" instance=ExtResource("12_pmnro")]
position = Vector2(35, 144)
scale = Vector2(-1, 1)
text = "Kõrvaloleva ruudulise ala sees on võimalik kaste avada."
text_en = "Boxes can be opened in the adjacent area."
panel_name = "ram_packagepanel1"
sprite = "res://world/dropoff_sign.png"

[node name="InfoPanel2" parent="ysort" instance=ExtResource("12_pmnro")]
position = Vector2(286, 144)
text = "Selle ruudulise ala sees on võimalik infofail pakkida kasti sisse. Selleks: 1) pane infofail ala sees maha, 2) võta riiulilt kast ja 3) kasti ikka käes hoides pane infofail ala sees kasti sisse."
text_en = "Info files can be stored inside boxes in the adjacent area. To store info inside a box, put down the info file inside the area, take a box from the shelf and put the info file inside the box while holding the box."
panel_name = "ram_packagepanel2"
sprite = "res://world/dropoff_sign.png"

[node name="Ladder_wall" type="StaticBody2D" parent="."]

[node name="wall_collision" type="CollisionPolygon2D" parent="Ladder_wall"]
visible = false
polygon = PackedVector2Array(0, 108, 251.016, 108, 251, 109.5, 277, 109.5, 277.016, 108, 320, 108, 320, 77, 0, 77)

[node name="wall_collision_clipped" type="CollisionPolygon2D" parent="Ladder_wall"]
visible = false
polygon = PackedVector2Array(6, 40, 6, 50, 12, 53, 12, 45)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 145.0
offset_top = 35.0
offset_right = 265.0
offset_bottom = 70.0
scale = Vector2(0.2, 0.2)
focus_mode = 0
theme_override_fonts/font = ExtResource("14_hw4pw")
theme_override_styles/normal = SubResource("StyleBoxFlat_m47pm")
theme_override_styles/hover = SubResource("StyleBoxFlat_216ju")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4jjbt")
text = "🥚"

[connection signal="body_entered" from="DropOffArea" to="." method="_on_drop_off_area_body_entered"]
[connection signal="body_exited" from="DropOffArea" to="." method="_on_drop_off_area_body_exited"]
[connection signal="body_entered" from="DropOffArea2" to="." method="_on_drop_off_area_body_entered"]
[connection signal="body_exited" from="DropOffArea2" to="." method="_on_drop_off_area_body_exited"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
